[package]
name = "qvs21"
version = "0.0.8"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "Modern replacement for csv for the year 2021 (with subtables)"
repository = "https://github.com/LucianoBestia/qvs21"
readme = "README.md"
license = "MIT"
keywords = ["rust"]
categories = []
# publish as a cargo tool. Only this files.
publish = false
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
qvs21_derive = {path="../qvs21_derive"}
unwrap = "1.2.1"
strum = "0.18.0"
strum_macros = "0.18.0"
thiserror="1.0.20"
rust_decimal = "1.6.0"
chrono ="0.4.13"
regex = "1.3.9"
lazy_static="1.4.0"
ryu = "1.0"

[dev-dependencies]
log = "0.4.8"
env_logger = "0.7.1"
csv="1.1.3"
ansi_term = "0.12.1"
serde ="1.0.114"
serde_derive="1.0.114"
serde_json = "1.0.56"
anyhow = "1.0.31"